--- a/about.html
+++ b/about.html
@@ -6,20 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="keywords" content="Algorithm, Trading, Signals, Algo, Forex, Crypto, IQ ALGO 2, SMART, EASY, IQalgo,  Make It Easy, Trade IQalgo, Start trading instantly with IQ algo, Join the BIG PLAYERS NOW">
-    <title>Terms of Service - IQ ALGO</title>
+    <meta name="keywords" content="LiquidEther, Staking, Liquid staking, Node staking">
+    <title>About the Protocol - LiquidEther</title>
     <!-- Embed -->
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="IQ ALGO">
-    <meta property="og:title" content="Terms of Service">
-    <meta property="og:description" content="IQAlgo is a trading indicator crafted by a team of professionals with decades of experience in the world of market trading.">
-    <meta name="Description" content="IQAlgo is a trading indicator crafted by a team of professionals with decades of experience in the world of market trading.">
-    <meta property="og:image" content="https://i.ibb.co/3Rd5pVS/logo-2.png">
-    <meta property="og:url" content="https://iqalgo.io/">
+    <meta property="og:title" content="LiquidEther - About the Protocol">
+    <meta property="og:description" content="Your friendly decentralised Ethereum staking protocol.">
+    <meta name="Description" content="Your friendly decentralised Ethereum staking protocol.">
+    <meta property="og:image" content="https://www.biacc.shop/assets/images/logo-2.png">
+    <meta property="og:url" content="https://liquidether.com/">
     <meta property="og:locale" content="en_US">
     <meta name="theme-color" content="#00e3ff">
     <!-- Links -->
-    <link rel="icon" href="/assets/images/logo.png" type="image/png">
+    <link rel="icon" href="/assets/images/favicon.png" type="image/png">
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
     <!-- Scripts -->
     <script defer src="/_vercel/insights/script.js"></script>
@@ -27,26 +26,6 @@
 </head>
 
 <body>
-    <!-- Visual Eclipses -->
-    <i>
-        <img id="eclipse-right1" src="assets/images/Visuals/Eclipse-right-1.png" alt="Logo">
-    </i>
-
-    <!-- Announcement section -->
-    <section id="announcement">
-        <div class="announcement">
-            <div class="content">
-                <p>
-                    <a href="/#pricing">🚀 Ending Soon: Get the Lifetime Plan 90% Off</a>
-                </p>
-            </div>
-
-            <div class="right">
-                <span class="announcement-close">&times;</span>
-            </div>
-        </div>
-    </section>
-
     <!-- Header section -->
     <header class="header" id="home">
         <div class="navigation">
@@ -54,37 +33,35 @@
             <div>
                 <a href="/">
                     <i>
-                        <img class="logo" src="assets/images/logo.png" alt="Logo">
+                        <img class="logo" src="assets/images/logo.webp" alt="Logo">
                     </i>
                 </a>
             </div>
 
             <div class="navbar">
-                <a href="/">Home</a>
-                <a href="/#whyus">Why Us</a>
-                <a href="/#results">Results</a>
-                <a href="/#pricing">Pricing</a>
-                <a href="https://iqalgo.gitbook.io/product-docs/" target="_blank" rel="noopener noreferrer">Tutorial</a>
-                <a href="mailto:iqalgo8@gmail.com">Contact</a>
+                <a href="#">About the protocol</a>
+                <a href="/what-is-liquid-staking">What is Liquid Staking?</a>
+                <a href="/what-can-i-earn">What can I earn?</a>
             </div>
 
             <div id="black-bar">
                 <div id="nav-blackbar">
-                    <a class="nav-blackbar-item" href="/">Home</a>
-                    <a class="nav-blackbar-item" href="/#whyus">Why Us</a>
-                    <a class="nav-blackbar-item" href="/#results">Results</a>
-                    <a class="nav-blackbar-item" href="/#pricing">Pricing</a>
-                    <a class="nav-blackbar-item" href="https://iqalgo.gitbook.io/product-docs/" target="_blank" rel="noopener noreferrer">Tutorial</a>
-                    <a class="nav-blackbar-item" href="mailto:iqalgo8@gmail.com">Contact</a>
-                    <a class="nav-blackbar-item" href="/#faq">FAQ</a>
-                    <a class="nav-blackbar-item" href="#">Terms of Service</a>
+                    <a href="/">
+                        <i>
+                            <img class="logo" src="assets/images/logo.webp" alt="Logo">
+                        </i>
+                    </a>
+                    <br>
+                    <a class="nav-blackbar-item" href="#">About the protocol</a>
+                    <a class="nav-blackbar-item" href="/what-is-liquid-staking">What is Liquid Staking?</a>
+                    <a class="nav-blackbar-item" href="/what-can-i-earn">What can I earn?</a>
                 </div>
             </div>
 
             <div class="nav-right">
                 <div>
-                    <a href="/#pricing" class="btn btn-header">
-                        Get Now
+                    <a href="/" class="btn btn-header">
+                        Launch
                     </a>
                 </div>
 
@@ -138,57 +115,44 @@
     <!-- Footer section -->
     <footer class="footer">
         <div class="container">
-
-            <div class="footer-navigation">
-                <div class="item-1 footer-row">
-                    <p class="item-title">Explore</p>
-                    <div><a href="/">Home</a></div>
-                    <div><a href="/#whyus">Why Us</a></div>
-                    <div><a href="/#results">Results</a></div>
-                    <div><a href="/#pricing">Pricing</a></div>
+            <div class="footer-content">
+                <div class="footer-navigation">
+                    <div class="item-1 footer-row">
+                        <div>
+                            <a href="/">
+                                <i>
+                                    <img class="logo" src="assets/images/logo.webp" alt="Logo">
+                                </i>
+                            </a>
+                        </div>
+                        <div><p>LiquidEther. Your friendly decentralised Ethereum staking protocol.</p></div>
+                    </div>
+                    <div class="item-2 footer-row">
+                        <p class="item-title">Company</p>
+                        <div><a href="/">Home</a></div>
+                        <div><a href="#">About the protocol</a></div>
+                        <div><a href="/what-is-liquid-staking">What is Liquid Staking?</a></div>
+                        <div><a href="/what-can-i-earn">What can I earn?</a></div>
+                    </div>
+                    <div class="item-3 footer-row">
+                        <p class="item-title">Contact Us</p>
+                        <div><a href="tel:+12223334444">+1 222-333-4444</a></div>
+                        <div><a href="mailto:info@liquidether.com">info@liquidether.com</a></div>
+                        <div><a class="footer-loc">123 Main Street, Anytown USA 12345</a></div>
+                    </div>
                 </div>
 
-                <div class="item-2 footer-row">
-                    <p class="item-title">Learn</p>
-                    <div><a href="https://iqalgo.gitbook.io/product-docs/" target="_blank" rel="noopener noreferrer">Tutorial</a></div>
-                    <div><a href="/#faq">FAQ</a></div>
-                </div>
-
-                <div class="item-3 footer-row">
-                    <p class="item-title">Support</p>
-                    <div><a href="#">Terms of Service</a></div>
-                    <div><a href="mailto:iqalgo8@gmail.com">Contact</a></div>
-                </div>
-
-                <div class="item-4 footer-row">
-                    <a href="/">
-                        <i>
-                            <img class="logo" src="assets/images/logo.png" alt="Logo">
-                        </i>
-                    </a>
-                    <p>IQ Algo. Join the BIG PLAYERS.</p>
-                </div>
-            </div>
-
-            <div class="footer-copyright">
-
-                <div class="copyright-text">
-                    <p>
-                        Copyright &copy; 2023 IQ Algo. All Rights Reserved.
-                    </p>
-                    <p>
-                        Made with <i class="fa-solid fa-heart footerheart-icon"></i> by <a href="https://biacc.shop/" target="_blank">Biacc</a>
-                    </p>
+                <div class="footer-copyright">
+                    <p>&copy; 2023 LiquidEther. All Rights Reserved.</p>
+                    <p>Made with <i class="fa-solid fa-heart footerheart-icon"></i> by <a href="https://www.biacc.shop/" target="_blank" rel="noopener">Biacc</a></p>
                 </div>
             </div>
-
         </div>
     </footer>
 
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-    <script src="/assets/js/tos.js"></script>
+    <script src="/assets/js/main.js"></script>
 
 </body>
-
 </html>
