--- a/about.html
+++ b/about.html
@@ -39,9 +39,10 @@
             </div>
 
             <div class="navbar">
-                <a href="#">About the protocol</a>
-                <a href="/what-is-liquid-staking">What is Liquid Staking?</a>
-                <a href="/what-can-i-earn">What can I earn?</a>
+                <a href="/">Home</a>
+                <a href="#">About</a>
+                <a href="/what-is-liquid-staking">Liquid Staking</a>
+                <a href="/what-can-i-earn">Earn</a>
             </div>
 
             <div id="black-bar">
@@ -52,9 +53,10 @@
                         </i>
                     </a>
                     <br>
-                    <a class="nav-blackbar-item" href="#">About the protocol</a>
-                    <a class="nav-blackbar-item" href="/what-is-liquid-staking">What is Liquid Staking?</a>
-                    <a class="nav-blackbar-item" href="/what-can-i-earn">What can I earn?</a>
+                    <a class="nav-blackbar-item" href="/">Home</a>
+                    <a class="nav-blackbar-item" href="#">About</a>
+                    <a class="nav-blackbar-item" href="/what-is-liquid-staking">Liquid Staking</a>
+                    <a class="nav-blackbar-item" href="/what-can-i-earn">Earn</a>
                 </div>
             </div>
 
@@ -130,9 +132,9 @@
                     <div class="item-2 footer-row">
                         <p class="item-title">Company</p>
                         <div><a href="/">Home</a></div>
-                        <div><a href="#">About the protocol</a></div>
-                        <div><a href="/what-is-liquid-staking">What is Liquid Staking?</a></div>
-                        <div><a href="/what-can-i-earn">What can I earn?</a></div>
+                        <div><a href="#">About</a></div>
+                        <div><a href="/what-is-liquid-staking">Liquid Staking</a></div>
+                        <div><a href="/what-can-i-earn">Earn</a></div>
                     </div>
                     <div class="item-3 footer-row">
                         <p class="item-title">Contact Us</p>
