--- a/what-is-liquid-staking.html
+++ b/what-is-liquid-staking.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="LiquidEther - What is Liquid Staking?">
     <meta property="og:description" content="Your friendly decentralised Ethereum staking protocol.">
     <meta name="Description" content="Your friendly decentralised Ethereum staking protocol.">
-    <meta property="og:image" content="https://www.biacc.shop/assets/images/logo-2.png">
+    <meta property="og:image" content="https://biaccshop-liquidether.vercel.app/assets/images/logo.png">
     <meta property="og:url" content="https://liquidether.com/">
     <meta property="og:locale" content="en_US">
     <meta name="theme-color" content="#00e3ff">
