--- a/index.html
+++ b/index.html
@@ -77,7 +77,13 @@
 
     <!-- Main section -->
     <main>
-
+        <!-- Eclipses section -->
+        <div class="eclipse0"></div>
+        <div class="eclipse1"></div>
+        <div class="eclipse2"></div>
+        <div class="eclipse3"></div>
+        <div class="eclipse4"></div>
+        <div class="eclipse5"></div>
 
         <!-- Hero section -->
         <section id="hero">
@@ -90,6 +96,7 @@
                             <h2>earn rewards,</h2>
                             <h2>& help secure</h2>
                             <h2>Ethereum</h2>
+                            <div class="hero-eclipse"></div>
                         </div>
 
                         <p>Rocket Pool is the leading decentralised staking protocol for Ethereum</p>
@@ -103,6 +110,7 @@
 
                     <div class="hero-img">
                         <img src="assets/images/img-hero.webp">
+                        <div class="hero-eclipse-2"></div>
                     </div>
                 </div>
             </div>
