--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                     <div class="hero-content">
                         <div class="hero-title">
                             <h1>LiquidEther</h1>
-                            <h2>Stake your ETH,</h2>
-                            <h2>earn rewards,</h2>
-                            <h2>& help secure</h2>
-                            <h2>Ethereum</h2>
+                            <h2 class="line1">Stake your ETH,</h2>
+                            <h2 class="line2">earn rewards,</h2>
+                            <h2 class="line3">& help secure</h2>
+                            <h2 class="line4">Ethereum</h2>
                             <div class="hero-eclipse"></div>
                         </div>
 
