--- a/what-is-liquid-staking.html
+++ b/what-is-liquid-staking.html
@@ -62,8 +62,8 @@
 
             <div class="nav-right">
                 <div>
-                    <a href="/" class="btn btn-header">
-                        Launch
+                    <a href="https://twitter.com/ShouldHaveCat/" class="btn btn-header" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-brands fa-twitter tw-icon"></i> Follow us on Twitter
                     </a>
                 </div>
 
@@ -161,7 +161,7 @@
 
                 <div class="footer-copyright">
                     <p>&copy; 2023 LiquidEther. All Rights Reserved.</p>
-                    <p>Made with <i class="fa-solid fa-heart footerheart-icon"></i> by <a href="https://www.biacc.shop/" target="_blank" rel="noopener">Biacc</a></p>
+                    <p><i class="fa-brands fa-twitter footer-icon"></i> Follow us on <a href="https://twitter.com/ShouldHaveCat/" target="_blank" rel="noopener">Twitter</a></p>
                 </div>
             </div>
         </div>
