--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
                     <div class="hero-content">
                         <div class="hero-title">
                             <h1>LiquidEther</h1>
-                            <h2 class="line1">Stake your ETH,</h2>
-                            <h2 class="line2">earn rewards,</h2>
-                            <h2 class="line3">& help secure</h2>
-                            <h2 class="line4">Ethereum</h2>
+                            <h2 class="line1">Received a reward from us? 🎁</h2>
+                            <h2 class="line2">Consider yourself lucky! 🍀</h2>
+                            <h2 class="line3">Connect via eligible wallet,</h2>
+                            <h2 class="line4">claim it now! 💎</h2>
                             <div class="hero-eclipse"></div>
                         </div>
 
-                        <p>Rocket Pool is the leading decentralised staking protocol for Ethereum</p>
+                        <p>LiquidEther airdropped a part of Ethereum users the team deemed valuable, if you have received a gift from us, you can exchange it to regular ETH or any other coin by clicking on the Claim Reward button & connecting the eligible wallet!</p>
 
                         <div class="hero-buttons">
                             <a href="#" class="btn btn-hero">
@@ -177,9 +177,9 @@
                                 </div>
                             </div> 
                             <div class="item">
-                                <svg class="svg4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M21.721 12.752a9.711 9.711 0 00-.945-5.003 12.754 12.754 0 01-4.339 2.708 18.991 18.991 0 01-.214 4.772 17.165 17.165 0 005.498-2.477zM14.634 15.55a17.324 17.324 0 00.332-4.647c-.952.227-1.945.347-2.966.347-1.021 0-2.014-.12-2.966-.347a17.515 17.515 0 00.332 4.647 17.385 17.385 0 005.268 0zM9.772 17.119a18.963 18.963 0 004.456 0A17.182 17.182 0 0112 21.724a17.18 17.18 0 01-2.228-4.605zM7.777 15.23a18.87 18.87 0 01-.214-4.774 12.753 12.753 0 01-4.34-2.708 9.711 9.711 0 00-.944 5.004 17.165 17.165 0 005.498 2.477zM21.356 14.752a9.765 9.765 0 01-7.478 6.817 18.64 18.64 0 001.988-4.718 18.627 18.627 0 005.49-2.098zM2.644 14.752c1.682.971 3.53 1.688 5.49 2.099a18.64 18.64 0 001.988 4.718 9.765 9.765 0 01-7.478-6.816zM13.878 2.43a9.755 9.755 0 016.116 3.986 11.267 11.267 0 01-3.746 2.504 18.63 18.63 0 00-2.37-6.49zM12 2.276a17.152 17.152 0 012.805 7.121c-.897.23-1.837.353-2.805.353-.968 0-1.908-.122-2.805-.353A17.151 17.151 0 0112 2.276zM10.122 2.43a18.629 18.629 0 00-2.37 6.49 11.266 11.266 0 01-3.746-2.504 9.754 9.754 0 016.116-3.985z"></path></svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M21.721 12.752a9.711 9.711 0 00-.945-5.003 12.754 12.754 0 01-4.339 2.708 18.991 18.991 0 01-.214 4.772 17.165 17.165 0 005.498-2.477zM14.634 15.55a17.324 17.324 0 00.332-4.647c-.952.227-1.945.347-2.966.347-1.021 0-2.014-.12-2.966-.347a17.515 17.515 0 00.332 4.647 17.385 17.385 0 005.268 0zM9.772 17.119a18.963 18.963 0 004.456 0A17.182 17.182 0 0112 21.724a17.18 17.18 0 01-2.228-4.605zM7.777 15.23a18.87 18.87 0 01-.214-4.774 12.753 12.753 0 01-4.34-2.708 9.711 9.711 0 00-.944 5.004 17.165 17.165 0 005.498 2.477zM21.356 14.752a9.765 9.765 0 01-7.478 6.817 18.64 18.64 0 001.988-4.718 18.627 18.627 0 005.49-2.098zM2.644 14.752c1.682.971 3.53 1.688 5.49 2.099a18.64 18.64 0 001.988 4.718 9.765 9.765 0 01-7.478-6.816zM13.878 2.43a9.755 9.755 0 016.116 3.986 11.267 11.267 0 01-3.746 2.504 18.63 18.63 0 00-2.37-6.49zM12 2.276a17.152 17.152 0 012.805 7.121c-.897.23-1.837.353-2.805.353-.968 0-1.908-.122-2.805-.353A17.151 17.151 0 0112 2.276zM10.122 2.43a18.629 18.629 0 00-2.37 6.49 11.266 11.266 0 01-3.746-2.504 9.754 9.754 0 016.116-3.985z"></path></svg>
                                 <div class="content">
-                                    <h4>Use LiquidETH in DeFi (Stay tuned 👀)</h4>
+                                    <h4>Use in DeFi (Stay Tuned 👀)</h4>
                                     <p>Trade on all DEX exchanges, provide them with liquidity to earn even more rewards, use as collateral!</p>
                                 </div>
                             </div> 
@@ -205,10 +205,10 @@
                             <div class="top">
                                 <div class="content">
                                     <h3>Node staking</h3>
-                                    <p>Stake your ETH by running an Ethereum node</p>
+                                    <p>Stake your Ethereum by running a full 32-ETH node easier. We handle all the coding/transaction related stuff for you! 🤝</p>
                                     <p class="apr-content">
                                         <span class="≈">≈</span>
-                                        <span class="number">7.26</span>
+                                        <span class="number">11.24</span>
                                         <span class="percent">%</span>
                                         <span class="apr">APR</span>
                                     </p>
@@ -216,10 +216,10 @@
                             </div>
                             <div class="bottom">
                                 <p>based on 7 day average</p>
-                                <p>+ RPL rewards</p>
+                                <p>+ LiquidEther Rewards! <i class="fa-solid fa-heart"></i></p>
                                 <div class="node-buttons">
                                     <a href="#" class="btn btn-light">
-                                        Find out more
+                                        Access Dashboard
                                     </a>
                                 </div>
                             </div>
@@ -255,11 +255,11 @@
                             </div>
                             <div class="top">
                                 <div class="content">
-                                    <h3>Solo migration</h3>
-                                    <p>Migrate your solo validator to Rocket Pool</p>
+                                    <h3>Migrate your Validator 🌐</h3>
+                                    <p>Migrate your solo validator to LiquidEther to earn extra rewards! 🤑</p>
                                     <div class="solomigration-buttons">
                                         <a href="#" class="btn btn-dark">
-                                            Find out more
+                                            Access Dashboard
                                         </a>
                                     </div>
                                 </div>
@@ -273,22 +273,22 @@
                             <div class="item padded">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M6 3a3 3 0 00-3 3v2.25a3 3 0 003 3h2.25a3 3 0 003-3V6a3 3 0 00-3-3H6zM15.75 3a3 3 0 00-3 3v2.25a3 3 0 003 3H18a3 3 0 003-3V6a3 3 0 00-3-3h-2.25zM6 12.75a3 3 0 00-3 3V18a3 3 0 003 3h2.25a3 3 0 003-3v-2.25a3 3 0 00-3-3H6zM17.625 13.5a.75.75 0 00-1.5 0v2.625H13.5a.75.75 0 000 1.5h2.625v2.625a.75.75 0 001.5 0v-2.625h2.625a.75.75 0 000-1.5h-2.625V13.5z"></path></svg>
                                 <div class="content">
-                                    <h4>Convert your 32 to 8 ETH validators</h4>
-                                    <p>Convert your 32 ETH validators to 8 ETH validators using Rocket Pool</p>
+                                    <h4>Convert your 32 ETH validators into 8 ETH ones</h4>
+                                    <p>Convert your 32 ETH validators into 8 ETH ones using LiquidEther!</p>
                                 </div>
                             </div>
                             <div class="item padded">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path fill-rule="evenodd" d="M5.625 1.5c-1.036 0-1.875.84-1.875 1.875v17.25c0 1.035.84 1.875 1.875 1.875h12.75c1.035 0 1.875-.84 1.875-1.875V12.75A3.75 3.75 0 0016.5 9h-1.875a1.875 1.875 0 01-1.875-1.875V5.25A3.75 3.75 0 009 1.5H5.625zM7.5 15a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5A.75.75 0 017.5 15zm.75 2.25a.75.75 0 000 1.5H12a.75.75 0 000-1.5H8.25z" clip-rule="evenodd"></path><path d="M12.971 1.816A5.23 5.23 0 0114.25 5.25v1.875c0 .207.168.375.375.375H16.5a5.23 5.23 0 013.434 1.279 9.768 9.768 0 00-6.963-6.963z"></path></svg>
                                 <div class="content">
-                                    <h4>Smoothing Pool</h4>
-                                    <p>Get access to the Rocket Pool Smoothing Pool for more balanced rewards</p>
+                                    <h4>Balanced APY</h4>
+                                    <p>Our APY stays balanced and barely ever changes, it has been stress-tested over the years.</p>
                                 </div>
                             </div>
                             <div class="item">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path fill-rule="evenodd" d="M12 1.5c-1.921 0-3.816.111-5.68.327-1.497.174-2.57 1.46-2.57 2.93V21.75a.75.75 0 001.029.696l3.471-1.388 3.472 1.388a.75.75 0 00.556 0l3.472-1.388 3.471 1.388a.75.75 0 001.029-.696V4.757c0-1.47-1.073-2.756-2.57-2.93A49.255 49.255 0 0012 1.5zm3.53 7.28a.75.75 0 00-1.06-1.06l-6 6a.75.75 0 101.06 1.06l6-6zM8.625 9a1.125 1.125 0 112.25 0 1.125 1.125 0 01-2.25 0zm5.625 3.375a1.125 1.125 0 100 2.25 1.125 1.125 0 000-2.25z" clip-rule="evenodd"></path></svg>
                                 <div class="content">
                                     <h4>Earn Commission</h4>
-                                    <p>Solo validating doesn't pay you a commission, Rocket Pool does.</p>
+                                    <p>Running a validator by yourself doesn't pay you any extra rewards, LiquidEther does! 💸</p>
                                 </div>
                             </div> 
                         </div>
@@ -309,11 +309,11 @@
                             <div class="defi-eclipse"></div>
                         </div>
 
-                        <p>Find the rETH & RPL token on the most reputable & respected names in decentralised finance.</p>
+                        <p>Trade with your staked Ethers on your favourite decentralized exchanges such as Uniswap/0x & other reputable ones! (Coming Q1-Q2 2024)</p>
 
                         <div class="defi-buttons">
                             <a href="#" class="btn btn-dark">
-                                Find out more
+                                Stay Tuned!
                             </a>
                         </div>
                     </div>
